test: 이벤트 테스트코드 jdk 17 버전에 맞게 수정
- getFirst 대신 get(0) 사용